--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <nav><ul>
+        <li>home</li>
+        <li>about</li>
+        <li>service</li>
+    </ul></nav>
 </body>
 </html>
