update navbar and h1 color

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <nav><ul>
-        <li>home</li>
+        <li>test</li>
         <li>about</li>
         <li>service</li>
     </ul></nav>
+    <h1>hello world</h1>
 </body>
 </html>
