--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>test conflict</h1>
     <nav><ul>
         <li>test</li>
         <li>about</li>
         <li>service</li>
     </ul></nav>
-    <h1>hello world</h1>
+    <h2>my name is mohammed</h2>
 </body>
 </html>
