--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test conflict</h1>
-    <nav><ul>
-        <li>test</li>
-        <li>about</li>
-        <li>service</li>
-    </ul></nav>
-    <h2>my name is mohammed</h2>
+    <h3>hello from mohammed</h3>
 </body>
 </html>
